# netbox-unifi-sync

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
docs/: api.md  configuration.md  ui.md
netbox_unifi_sync/: configuration.py  forms.py  jobs.py  models.py  navigation.py  urls.py  views.py
netbox_unifi_sync/management/commands/: netbox_unifi_sync_backfill_vrf.py  netbox_unifi_sync_cleanup_jobs.py  netbox_unifi_sync_consolidate_manufacturer.py
netbox_unifi_sync/migrations/: 0009_sync_port_link_state.py
netbox_unifi_sync/services/: job_maintenance.py  orchestrator.py  runtime.py  sync_engine.py
netbox_unifi_sync/services/data/: ubiquiti_device_specs.json
netbox_unifi_sync/services/sync/: log_sanitizer.py  netbox_orm.py
netbox_unifi_sync/services/unifi/: resources.py  spec_refresh.py  unifi.py
netbox_unifi_sync/templates/netbox_unifi_sync/: audit.html  controller_delete.html  controller_form.html  controllers.html  dashboard.html  mapping_delete.html  mapping_form.html  mappings.html  run_detail.html  runs.html  settings.html
tests/: test_client_ip_cleanup.py  test_job_maintenance.py  test_pagination.py  test_port_metadata.py
