[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-unifi-sync"
version = "0.3.24"
description = "Production-ready NetBox plugin for UniFi synchronization"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
  { name = "Patrick Lind" }
]
license = "MIT"
keywords = ["netbox", "plugin", "unifi", "dcim", "ipam"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 5.0",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
]
dependencies = [
  "pyotp~=2.9.0",
  "requests>=2.33.0,<3.0.0",
  "PyYAML~=6.0.2",
  "python-slugify~=8.0.4",
  "urllib3~=2.6.3"
]

[project.entry-points."netbox.plugins"]
netbox_unifi_sync = "netbox_unifi_sync"

[project.urls]
Homepage = "https://github.com/unifi2netbox/netbox-unifi-sync"
Repository = "https://github.com/unifi2netbox/netbox-unifi-sync"
Issues = "https://github.com/unifi2netbox/netbox-unifi-sync/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"netbox_unifi_sync" = [
  "templates/netbox_unifi_sync/*.html",
  "migrations/*.py",
  "management/commands/*.py",
]
"netbox_unifi_sync.services" = ["data/*.json"]

[tool.setuptools.packages.find]
namespaces = false
include = ["netbox_unifi_sync*"]
exclude = [
  "tests*",
  "docs*",
  "lxc*",
  "tools*",
  "deploy*",
  "netbox_unifi_sync.templates*",
]
